; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched_idletask.c_switched_to_idle.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched_idletask.c_switched_to_idle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rq = type { i32 }
%struct.task_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rq*, %struct.task_struct*, i32)* @switched_to_idle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @switched_to_idle(%struct.rq* %0, %struct.task_struct* %1, i32 %2) #0 {
  %4 = alloca %struct.rq*, align 8
  %5 = alloca %struct.task_struct*, align 8
  %6 = alloca i32, align 4
  store %struct.rq* %0, %struct.rq** %4, align 8
  store %struct.task_struct* %1, %struct.task_struct** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %3
  %10 = load %struct.rq*, %struct.rq** %4, align 8
  %11 = getelementptr inbounds %struct.rq, %struct.rq* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @resched_task(i32 %12)
  br label %18

14:                                               ; preds = %3
  %15 = load %struct.rq*, %struct.rq** %4, align 8
  %16 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %17 = call i32 @check_preempt_curr(%struct.rq* %15, %struct.task_struct* %16, i32 0)
  br label %18

18:                                               ; preds = %14, %9
  ret void
}

declare dso_local i32 @resched_task(i32) #1

declare dso_local i32 @check_preempt_curr(%struct.rq*, %struct.task_struct*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
